Correction pour faire fonctionner les TU