@@ -4,7 +4,6 @@ import java.sql.Timestamp;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.GregorianCalendar;
-import java.util.List;
 
 import com.supdevinci.tournamentmanager.model.Player;
 import com.supdevinci.tournamentmanager.model.State;
@@ -20,7 +19,7 @@ public class Constant {
     public static Player P2 = new Player(2L, "P2", "24001");
     public static Player P3 = new Player(3L, "P3", "24002");
     // Team
-    public static Team T1 = new Team(1L, "T1", List.of(P1));
+    public static Team T1 = new Team(1L, "T1", Arrays.asList(P1));
     public static Team T2 = new Team(2L, "T2", Arrays.asList(P2, P3));
     // State
     public static State S1 = new State(1L, "Planifié");
@@ -34,10 +33,7 @@ public class Constant {
             new Timestamp(new GregorianCalendar(2023, Calendar.FEBRUARY, 11).getTime().getTime()),
             S1,
             Arrays.asList(T1, T2),
-    2
-    )
-
-    ;
+            2);
 
     public static Tournament TO2 = new Tournament(
             2L,
@@ -54,5 +50,6 @@ public class Constant {
             new Timestamp(new GregorianCalendar(2023, Calendar.FEBRUARY, 11).getTime().getTime()),
             S3,
             Arrays.asList(T1, T2),
-    2);
+            2,
+            T1);
 }
